coming soon finalised

--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Oink & Roll</title>
   </head>
   <body>
     <div class="container">
       <div class="row1">
         <div class="col-md-12">
-          <h1>Oink & Roll</h1>
-          <p> A pig MUST die!<br> A bloody game for lovely people.</p>
-          <p>Coming Soon!</p>
-        </div>
+          <centre><div class="soon">
+            <img src="images/pignose.png" alt="pignose">
+            <h1>Oink & Roll</h1>
+            <p> A pig MUST die!<br> A bloody game for lovely people.</p>
+            <h1>Coming Soon!</h1><centre>
+            <h6>
+              E(C)2018
+              <br>Le production Glauque
+              <br>empowered by/with nya_KE <br>
+            </h6>
+          </div>
+        </div> <!-- end "col-md-12" -->
+      </div> <!-- end "row1" -->
+    </div> <!-- end "container" -->
 
-      </div>
-
-    </div>
-    <h6>
-      E(C)2018
-      <br>Le production Glauque
-      <br>empowered by/with nya_KE <br>
-    </h6>
   </body>
 </html>
