adds story board to html

--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/master.css">
     <title>Oink & Roll</title>
   </head>
   <body>
     <div class="container">
-      <div class="row1">
+      <div class="row r1">
+            <div class="col-md-12">
+              <center><h6>nya_KE presents:</h6>
+              <h1 class= the >Oink and Roll</h1>
+              <img src="images/butcher.png" alt="butcher">
+              <h4>A pig MUST die!</h4> <center>
+            </div><!-- end class="col-md-12" -->
+      </div><!-- end class="row1" -->
+
+      <div class="row r2">
         <div class="col-md-12">
-          <h1>Oink & Roll</h1>
-          <p> A pig MUST die!<br> A bloody game for lovely people.</p>
-          <p>Coming Soon!</p>
-        </div>
+          <div id="story">
+            <center><h3>Once upon a time, there were three pigs and a butcher.</h3>
+              <p>Now, this butcher was a really good butcher. All the people in the town would enter his shop and after paying a fee would leave with bouncing bags and glee. As for the pigs numbered up to three. They lived quite snug in a sty quite muddy, never dry. Though fate declared eldest piggy a sneaky little spy.<br>
+              With a curious little eye, he would see the people happier than he. Oh he sighed, he could not never let that be.
+              So he pried and he tried till he realised the butcher's part. Promise not to cry for a tragic end is nigh. <br>
+              For eldest piggy stole away to the butcher's shop. In he went, looking for a key to joy but instead he found a sharpened toy. Chop, chop chop, was all we heard and the little piggy, he didn't come back.<br> At the moment two piggies remain, curious about the dissapearance of their kin. <br><br>
+              Play this game of two to find out which of the two shall go to the mysterious butcher's shop.</p>
+              <p class="instructions">Start by putting your names into the respective fields and proceed to roll your dice when able. First player to attain your set parameter shall escape the butcher's mission leaving the latter player with the perilous task!</p>
+            <button type="button" class="start btn">Play!</button><centre>
+          </div>
+        </div><!-- end "col-md-12" for story and instructions-->
+      </div><!-- end "row2"-->
 
-      </div>
 
-    </div>
-    <h6>
-      E(C)2018
-      <br>Le production Glauque
-      <br>empowered by/with nya_KE <br>
-    </h6>
+    </div> <!-- end "container" -->
   </body>
 </html>
