--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Oink & Roll</title>
   </head>
   <body>
