--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Oink & Roll</title>
   </head>
@@ -29,7 +30,24 @@
           </div>
         </div><!-- end "col-md-12" for story and instructions-->
       </div><!-- end "row2"-->
-
+      <div class="row">
+        <div class="col-md-6">
+          <div class="jumbotron" id="pig1">
+              <img src="images/" alt="pig">
+              <h3 class="score"></h3>
+              <button type="button" class="roll btn">Roll</button>
+              <button type="button" class="log btn">Log</button>
+          </div>
+        </div><!-- end "col-md-6" for pig 1 -->
+        <div class="col-md-6">
+          <div class="jumbotron" id="pig2">
+              <img src="images/" alt="pig">
+              <h3 class="score"></h3>
+              <button type="button" class="roll btn">Roll</button>
+              <button type="button" class="log btn">Log</button>
+          </div>
+        </div><!-- end "col-md-6" for pig 2 -->
+      </div>  <!-- end row for pigs-->
 
     </div> <!-- end "container" -->
   </body>
