adds footer details

--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
           </div>
         </div><!-- end "col-md-6" for pig 2 -->
       </div>  <!-- end row for pigs-->
+      <div class="row">
+        <div class="col-md-12">
+          <div class="footer">
+            <div id="refresh">
+              <p>Oink, there goes another piggy. Reverse the wheels of time by refreshing this page.</p>
+              <p>Reverse the wheels of time by refreshing this page. Click below, two pigs shall squeal again!</p>
+              <button type="button" class="refresh btn">refresh</button>
+            </div>
+            <h6>
+              E(C)2018
+              <br>Le production Glauque
+              <br>empowered by/with nya_KE <br>
+            </h6>
+          </div>
+        </div><!-- end col-md-12"-->
+      </div><!-- end "row4" for footer-->
 
     </div> <!-- end "container" -->
   </body>
