--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Oink & Roll</title>
   </head>
   <body>
@@ -52,9 +54,9 @@
         <div class="col-md-12">
           <div class="footer">
             <div id="refresh">
-              <p>Oink, there goes another piggy. Reverse the wheels of time by refreshing this page.</p>
+              <p>Oink, there goes another piggy.</p>
               <p>Reverse the wheels of time by refreshing this page. Click below, two pigs shall squeal again!</p>
-              <button type="button" class="refresh btn">refresh</button>
+              <button type="button" class="refresh btn">Refresh</button>
             </div>
             <h6>
               E(C)2018
@@ -64,7 +66,6 @@
           </div>
         </div><!-- end col-md-12"-->
       </div><!-- end "row4" for footer-->
-
     </div> <!-- end "container" -->
   </body>
 </html>
