adds various messages which allow me to change branch

--- a/index.html
+++ b/index.html
@@ -32,21 +32,23 @@
           </div>
         </div><!-- end "col-md-12" for story and instructions-->
       </div><!-- end "row2"-->
-      <div class="row">
+      <div class="row" id="pigs">
         <div class="col-md-6">
-          <div class="jumbotron" id="pig1">
-              <img src="images/" alt="pig">
-              <h3 class="score"></h3>
-              <button type="button" class="roll btn">Roll</button>
-              <button type="button" class="log btn">Log</button>
+          <div class="jumbotron pig" id="pig1">
+            <p></p>
+            <img src="images/" alt="pig">
+            <h3 class="score"></h3>
+            <button type="button" class="roll btn">Roll</button>
+            <button type="button" class="log btn">Log</button>
           </div>
         </div><!-- end "col-md-6" for pig 1 -->
         <div class="col-md-6">
-          <div class="jumbotron" id="pig2">
-              <img src="images/" alt="pig">
-              <h3 class="score"></h3>
-              <button type="button" class="roll btn">Roll</button>
-              <button type="button" class="log btn">Log</button>
+          <div class="jumbotron pig" id="pig2">
+            <p></p>
+            <img src="images/" alt="pig">
+            <h3 class="score"></h3>
+            <button type="button" class="roll btn">Roll</button>
+            <button type="button" class="log btn">Log</button>
           </div>
         </div><!-- end "col-md-6" for pig 2 -->
       </div>  <!-- end row for pigs-->
