adds sound and updates readme respectivelykd

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="row r1">
-            <div class="col-md-12">
+            <div class="col-sm-12">
               <center><h6>nya_KE presents:</h6>
               <h1 class= the >Oink and Roll</h1>
               <img src="images/butcher.png" alt="butcher">
@@ -19,7 +19,7 @@
       </div><!-- end class="row1" -->
 
       <div class="row r2">
-        <div class="col-md-12">
+        <div class="col-sm-12">
           <div id="story">
             <center><h3>Once upon a time, there were three pigs and a butcher.</h3>
               <p>Now, this butcher was a really good butcher. All the people in the town would enter his shop and after paying a fee would leave with bouncing bags and glee. As for the pigs numbered up to three. They lived quite snug in a sty quite muddy, never dry. Though fate declared eldest piggy a sneaky little spy.<br>
@@ -33,7 +33,7 @@
         </div><!-- end "col-md-12" for story and instructions-->
       </div><!-- end "row2"-->
       <div class="row" id="pigs">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <div class="jumbotron pig" id="pig1">
             <p></p>
             <img src="images/" alt="pig">
@@ -42,7 +42,7 @@
             <button type="button" class="log btn">Log</button>
           </div>
         </div><!-- end "col-md-6" for pig 1 -->
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <div class="jumbotron pig" id="pig2">
             <p></p>
             <img src="images/" alt="pig">
