--- a/index.html
+++ b/index.html
@@ -26,12 +26,28 @@
               With a curious little eye, he would see the people happier than he. Oh he sighed, he could not never let that be.
               So he pried and he tried till he realised the butcher's part. Promise not to cry for a tragic end is nigh. <br>
               For eldest piggy stole away to the butcher's shop. In he went, looking for a key to joy but instead he found a sharpened toy. Chop, chop chop, was all we heard and the little piggy, he didn't come back.<br> At the moment two piggies remain, curious about the dissapearance of their kin. <br><br>
-              Play this game of two to find out which of the two shall go to the mysterious butcher's shop.</p>
-              <p class="instructions">Start by putting your names into the respective fields and proceed to roll your dice when able. First player to attain your set parameter shall escape the butcher's mission leaving the latter player with the perilous task!</p>
+              Play a game for two to find out which pig shall undertake the fatal mission to the mysterious butcher's shop.</p>
             <button type="button" class="start btn">Play!</button><centre>
           </div>
         </div><!-- end "col-md-12" for story and instructions-->
-      </div><!-- end "row2"-->
+      </div><!-- end "row with story"-->
+      <div class="playdetails"> <!-- encloses ïnstructions and name input boxes-->
+        <div class="row">
+          <div class="col-sm-12">
+            <p class="instructions">Start by putting your names into the respective fields and proceed to roll your dice when able. First player to attain your set parameter shall escape the butcher's mission leaving the latter player with the perilous task!</p>
+          </div>
+        </div>
+        <div class="row">
+          <form class="playernames" action="index.html" method="post">
+            <div class="col-sm-6">
+              <input type="text" name="player1">
+            </div>
+            <div class="col-sm-6">
+              <input type="text" name="player2">
+            </div>
+          </form>
+        </div> <!-- end "row" with input boxes-->
+      </div> <!-- end div enclosing instructions and name input boxes-->
       <div class="row" id="pigs">
         <div class="col-sm-6">
           <div class="jumbotron pig" id="pig1">
@@ -57,11 +73,11 @@
           <div class="footer">
             <div id="refresh">
               <p>Oink, there goes another piggy.</p>
-              <p>Reverse the wheels of time by refreshing this page. Click below, two pigs shall squeal again!</p>
+              <p>Reverse the wheels of time by refreshing this page. Click below, two pigs shall live to squeal again!</p>
               <button type="button" class="refresh btn">Refresh</button>
             </div>
             <h6>
-              E(C)2018
+              (C)2018
               <br>Le production Glauque
               <br>empowered by/with nya_KE <br>
             </h6>
