adds copy sign to copyright footer

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <button type="button" class="refresh btn">Refresh</button>
             </div>
             <h6>
-              (C)2018
+              &copy2018
               <br>Le production Glauque
               <br>empowered by/with nya_KE <br>
             </h6>
