adds js code for name presentation

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <form class="playernames" action="index.html" method="post">
             <div class="col-sm-5">
               <label for="player1">Piggy One</label>
-              <input type="text" name="player1">
+              <input type="text" class="player1">
             </div>
             <div class="col-sm-2">
               <h4>VS</h4>
@@ -57,7 +57,7 @@
             </div>
             <div class="col-sm-5">
               <label for="player2">Piggy Two</label>
-              <input type="text" name="player2">
+              <input type="text" class="player2">
             </div>
           </form>
         </div> <!-- end "row" with input boxes-->
