perfects js code for name presentatio including rejection of empty value fields

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             </div>
             <div class="col-sm-2">
               <h4>VS</h4>
+              <p></p>
               <br>
               <button type="submit" name="button">Submit</button>
             </div>
@@ -66,7 +67,7 @@
         <div class="col-sm-6">
           <div class="jumbotron pig" id="pig1">
             <p></p>
-            <img src="images/" alt="pig">
+            <img src="images/happypig.jpeg" alt="pig">
             <h3 class="score"></h3>
             <button type="button" class="roll btn">Roll</button>
             <button type="button" class="log btn">Log</button>
@@ -75,7 +76,7 @@
         <div class="col-sm-6">
           <div class="jumbotron pig" id="pig2">
             <p></p>
-            <img src="images/" alt="pig">
+            <img src="images/happypig.jpeg" alt="pig">
             <h3 class="score"></h3>
             <button type="button" class="roll btn">Roll</button>
             <button type="button" class="log btn">Log</button>
