adds start Business Logic adapted from Katy codes

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             <label for="score1">Score:</label>
             <br>
             <h3 class="score score1"></h3>
+            <label for="cumuScore1">Cumulative Score:</label>
+            <br>
+            <h3 class="score cumuScore1"></h3>
             <button type="button" class="roll btn">Roll</button>
             <button type="button" class="log btn">Log</button>
           </div>
@@ -80,8 +83,12 @@
           <div class="jumbotron pig" id="pig2">
             <p class="names"></p>
             <img src="images/happypig.jpeg" alt="pig">
-            <label for="score2">Score:</label>
+            <label for="score2">Roll Score:</label>
+            <br>
             <h3 class="score score2"></h3>
+            <label for="cumuScore2">Cumulative Score:</label>
+            <br>
+            <h3 class="score cumuScore2"></h3>
             <button type="button" class="roll btn">Roll</button>
             <button type="button" class="log btn">Log</button>
           </div>
