notes that the empty name fields wasn't eorking and had to be fixed, js code changed from append to text

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
               <br>
               <input type="text" class="player2">
             </div>
-            <button type="submit" name="button">Submit</button>
+            <button type="submit" name="button" class="btn">Submit</button>
+            <p></p>
           </form>
         </div> <!-- end "row" with input boxes-->
       </div> <!-- end div enclosing instructions and name input boxes-->
